# piston-cli

./: .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Pipfile  README.md  config.yaml  flake.nix  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  test.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: flake-update.yml  linting.yml  publish-docs.yml  python-publish.yml
docs/: index.md
docs/js/: custom.js
docs/stylesheets/: custom.css
js/: termynal.js
packaging/: PKGBUILD
packaging/arch/: PKGBUILD
packaging/brew/: brew-deps.py  piston-cli.rb
packaging/nix/: default.nix  shell.nix
packaging/piston-cli-bin/: PKGBUILD
packaging/piston-cli-git/: PKGBUILD
piston/: __init__.py  __main__.py  _custom_click.py  cli.py  log.py  version.py
piston/colorschemes/: __init__.py  dracula.py  gruvbox.py  nord.py
piston/commands/: __init__.py  base.py  fallback_input.py  file.py  from_file.py  from_input.py  from_link.py  from_shell.py  fromfile.py  frominput.py  fromlink.py  input.py  link.py  shell.py  theme_list.py
piston/configuration/: choose_config.py  config_fixer.py  config_loader.py  config_validator.py  get_config.py  load_config.py
piston/configuration/validators/: box_validator.py  message_box_validator.py  prompt_validator.py  theme_validator.py  validator_base.py
piston/utilities/: compilers.py  constants.py  format_output.py  lang_extensions.py  languages.yml  maketable.py  parse_userinput.py  prompt_continuation.py  utils.py
piston/utils/: constants.py  helpers.py  lang_extensions.py  lexers.py  maketable.py  prompt_continuation.py  services.py  theme_preview.py
search/: search_index.json
