[tool.poetry]
name = "piston-cli"
version = "1.4.0"
description = "A cli tool with an terminal editor to compile over 35 languages instantly using the piston api."
authors = ["Shivansh-007 <shivansh-007@outlook.com>", "SuperMaZingCoder <supermazingcoder@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "piston" },
]

# Links
homepage = "https://github.com/Shivansh-007/piston-cli"
repository = "https://github.com/Shivansh-007/piston-cli"

keywords = ["shell", "cli", "code-editor", "code-execution", "compile", "piston"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9.4"
rich = "^10.1.0"
prompt-toolkit = "^3.0.18"
requests = "^2.25.1"
pygments = "^2.8.1"
more-itertools = "^8.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8"
flake8-annotations = "^2.3"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.5"
flake8-import-order = "^0.18"
flake8-string-format = "^0.3"
flake8-tidy-imports = "^4.1"
flake8-todo = "^0.7"
pep8-naming = "^0.11"
pre-commit = "^2.1"
taskipy = "^1.6.0"

[tool.poetry.scripts]
piston = "piston:main"

[tool.taskipy.tasks]
start = "python -m piston"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
